# dapp

./: .gitignore  docker-compose.yml
admin-dashboard/: package-lock.json  package.json
admin-dashboard/app/: app.css  routes.ts
auth-service/: .dockerignore  Dockerfile  README.md  pyproject.toml  worker.Dockerfile
auth-service/src/authservice/: __init__.py  config.py  db.py  deps.py  errors.py  models.py  outbox_worker_app.py  schema.py
auth-service/src/authservice/router/: __init__.py  auth_router.py
auth-service/src/authservice/services/: __init__.py  auth_service.py  jwt_service.py  password_service.py  redis_service.py  user_service.py
auth-service/src/authservice/workers/: outbox_worker.py
debezium-connectors/: Dockerfile  setup-connectors.sh
debezium-connectors/connectors/: products-connector.json  stores-connector.json
docs/: admin-api.md
gateway/: nginx.conf
inventory-service/: Dockerfile  HELP.md  build.gradle
product-service/: api.Dockerfile  fuzzer.Dockerfile  pyproject.toml
product-service/dummy/: products.json
product-service/scripts/: fuzzer.py  product_gen.mjs
product-service/src/productservice/: app.py  config.py  db.py  deps.py  errors.py  models.py  schema.py
product-service/src/productservice/router/: __init__.py  admin_router.py
product-service/src/productservice/service/: __init__.py  auth_service.py  image_service.py  product_service.py
profile-service/: .dockerignore  .project  settings.gradle
profile-service/api/: build.gradle
profile-service/common/: build.gradle
profile-service/kafka-listener/: Dockerfile  (+2 more)
store-service/: api.Dockerfile  pyproject.toml
store-service/dummy/: data.json
store-service/scripts/: fuzzer.py
store-service/src/storeservice/: api_app.py  config.py  db.py  deps.py  errors.py  models.py  schema.py
store-service/src/storeservice/routes/: admin_router.py
store-service/src/storeservice/services/: __init__.py  store_service.py
(+66 files in other folders)
