[project]
name = "authservice"
version = "0.1.0"
description = ""
authors = [
    {name = "soumit-s",email = "soumit.srim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "confluent-kafka (>=2.14.0,<3.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "bcrypt (>=5.0.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "authservice", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
