[project]
name = "productservice"
version = "0.1.0"
description = ""
authors = [
    {name = "soumit-s",email = "soumit.srim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka (>=2.14.0,<3.0.0)",
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
]

[tool.poetry]
packages = [{include = "productservice", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
