[project]
name = "storeservice"
version = "0.1.0"
description = ""
authors = [
    {name = "soumit-s",email = "soumit.srim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "geoalchemy2[shapely] (>=0.20.0,<0.21.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
]

[tool.poetry]
packages = [{include = "storeservice", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
